fix image stretch and about media query

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -38,7 +38,7 @@
     /*box-shadow: 0 0 5px 2px #d6d6d6;*/
 }
 
-@media (max-width: 830px) {
+@media (max-width: 855px) {
     .about p {
         font-size: 15px;
     }
@@ -51,6 +51,24 @@
 }
 
 @media (max-width: 778px) {
+    .about-right {
+        min-width: 300px;
+        max-width: 400px;
+    }
+    .about p {
+        font-size: 14px;
+        line-height: 28px;
+    }
+}
+
+@media (max-width: 740px) {
+    .about p {
+        font-size: 14px;
+        line-height: 25px;
+    }
+}
+
+@media (max-width: 714px) {
     .about {
         flex-direction: column;
         align-items: center;
