--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -53,5 +53,5 @@
     display: flex;
     justify-content: center;
     max-width: 100%;
-    height: auto;
+    object-fit: cover;
 }
